@@ -1078,7 +1078,7 @@ public class IceMethodInvokerUnitTest extends MockObjectTestCase {
     @Test(groups = "ticket:1150")
     public void testRFloatDoesNotGetRounded() throws Exception {
         Objective o = new Objective();
-        o.setLensNA(new Double(1.4));
+        o.setLensNA(Double.valueOf(1.4));
         omero.model.Objective o2 = (omero.model.Objective) mapper.handleOutput(
                 Objective.class, o);
         assertEquals(o.getLensNA().doubleValue(), o2.getLensNA().getValue());
